--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port $PORT",
-    "postinstall": "npm install --legacy-peer-deps && npm run build"
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -47,7 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
